--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "lodash.debounce": "^4.0.8",
+    "node-sass": "^9.0.0",
     "qs": "^6.10.3",
     "react": "^18.1.0",
     "react-content-loader": "^6.2.0",
@@ -26,7 +27,8 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.51.0",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
