--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
     "typescript": "^4.6.4",
