--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-pizza-v2",
+  "homepage": "https://melion11.github.io/pizza-project/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,6 +17,7 @@
     "ahooks": "^3.7.8",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
+    "gh-pages": "^6.0.0",
     "lodash.debounce": "^4.0.8",
     "node-sass": "^9.0.0",
     "qs": "^6.10.3",
@@ -37,7 +39,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
